Inserindo mais exercícios na lista 4.

--- a/curso/modulo1respostas4.html
+++ b/curso/modulo1respostas4.html
@@ -496,5 +496,293 @@ Console.ReadKey();
    </em>
    é primo.
   </p>
+  <p>
+   16) Dados dois números inteiros positivos, determinar o máximo divisor comum entre eles usando o algoritmo de Euclides. Exemplo:
+  </p>
+  <p>
+   <img alt="" src="http://williamivanski.com.br/curso/euclides.png"/>
+  </p>
+  <p>
+   O mdc entre 1128 e 336 é 24.
+  </p>
+  <p>
+   17) Dado
+   <em>
+    N
+   </em>
+   inteiro positivo, dizemos que
+   <em>
+    N
+   </em>
+   é
+   <em>
+    perfeito
+   </em>
+   se for igual à soma de seus divisores positivos diferentes de
+   <em>
+    N
+   </em>
+   .
+   <br/>
+   Exemplo: 6 é perfeito, pois 1 + 2 + 3 = 6.
+   <br/>
+   Verificar se um dado número inteiro positivo é perfeito.
+  </p>
+  <p>
+   18) Um matemático italiano da Idade Média conseguiu estudar o número de galhos em um certo nível de uma árvore através de uma sequência de números naturais que passou a ser conhecida como
+   <strong>
+    sequência de Fibonacci
+   </strong>
+   . O
+   <em>
+    n-ésimo
+   </em>
+   número da sequência de Fibonacci
+   <em>
+    F
+    <sub>
+     n
+    </sub>
+   </em>
+   é dado pela seguinte fórmula de recorrência:
+   <br/>
+   <em>
+    F
+    <sub>
+     1
+    </sub>
+   </em>
+   = 1
+   <br/>
+   <em>
+    F
+    <sub>
+     2
+    </sub>
+   </em>
+   = 1
+   <br/>
+   <em>
+    F
+    <sub>
+     i
+    </sub>
+   </em>
+   =
+   <em>
+    F
+    <sub>
+     i-1
+    </sub>
+   </em>
+   +
+   <em>
+    F
+    <sub>
+     i-2
+    </sub>
+   </em>
+   para i &gt;= 3.
+   <br/>
+   Faça um programa que dado
+   <em>
+    n
+   </em>
+   calcule
+   <em>
+    F
+    <sub>
+     n
+    </sub>
+   </em>
+   .
+  </p>
+  <p>
+   19) Dizemos que um número
+   <em>
+    i
+   </em>
+   é congruente módulo
+   <em>
+    m
+   </em>
+   a
+   <em>
+    j
+   </em>
+   se
+   <em>
+    i
+   </em>
+   mod
+   <em>
+    m
+   </em>
+   =
+   <em>
+    j
+   </em>
+   mod
+   <em>
+    m
+   </em>
+   .
+   <br/>
+   Exemplo: 35 é congruente módulo 4 a 39, pois 35 mod 4 = 3 = 39 mod 4.
+   <br/>
+   Dados
+   <em>
+    N
+   </em>
+   ,
+   <em>
+    j
+   </em>
+   e
+   <em>
+    m
+   </em>
+   naturais não nulos, imprimir os
+   <em>
+    N
+   </em>
+   primeiros naturais congruentes a
+   <em>
+    j
+   </em>
+   módulo
+   <em>
+    m
+   </em>
+   .
+  </p>
+  <p>
+   20) Dado um número natural na base binária, transformá-lo para a base decimal.
+   <br/>
+   Exemplo, dado 10010 a saída será 18, pois 1.2
+   <sup>
+    4
+   </sup>
+   +0.2
+   <sup>
+    3
+   </sup>
+   +0.2
+   <sup>
+    2
+   </sup>
+   +1.2
+   <sup>
+    1
+   </sup>
+   +0.2
+   <sup>
+    0
+   </sup>
+   = 18.
+  </p>
+  <p>
+   21) Dado um número natural na base decimal, transformá-lo para a base binária.
+   <br/>
+   Exemplo, dado 18 a saída deverá ser 10010.
+  </p>
+  <p>
+   22) Dados três números naturais, verificar se eles formam os lados de um triângulo retângulo.
+  </p>
+  <p>
+   23) Dados três números, imprimi-los em ordem crescente.
+  </p>
+  <p>
+   24) Qualquer número natural de quatro algarismos pode ser dividido em duas dezenas formadas pelos seus dois primeiros e dois últimos dígitos.
+   <br/>
+   Exemplos: 1297 (12 e 97) e 5314 (53 e 14).
+   <br/>
+   Escreva um programa que imprima todos os milhares (4 algarismos) cuja raiz quadrada seja a soma das dezenas formadas pela divisão acima.
+   <br/>
+   Exemplo: raiz de 9801 = 99 = 98 + 01. Portanto, 9801 é um dos números a ser impresso.
+  </p>
+  <p>
+   25) Dados
+   <em>
+    N
+   </em>
+   e uma sequência de
+   <em>
+    N
+   </em>
+   números inteiros, determinar quantos segmentos iguais consecutivos compõem essa sequência.
+   <br/>
+   Exemplo: a sequência 5,2,2,3,4,4,4,4,1,1 é formada por 5 segmentos de números iguais.
+  </p>
+  <p>
+   26) Dados um inteiro positivo
+   <em>
+    N
+   </em>
+   e uma sequência de
+   <em>
+    N
+   </em>
+   números inteiros, determinar o comprimento de um segmento crescente de comprimento máximo.
+   <br/>
+   Exemplos:
+   <br/>
+   - Na sequência 5,10,3,
+   <strong>
+    2,4,7,9
+   </strong>
+   ,8,5 o comprimento do segmento crescente máximo é 4.
+   <br/>
+   - Na sequência 10,8,7,5,2 o comprimento de um segmento crescente máximo é 1.
+  </p>
+  <p>
+   27) Simule a execução do programa abaixo destacando a sua saída:
+  </p>
+  <pre><code>int a, b, total, soma, termo;
+
+a = Int32.Parse(Console.ReadLine());
+b = Int32.Parse(Console.ReadLine());
+
+Console.WriteLine("({0},{1})", a, b);
+
+total = 0;
+soma = 0;
+
+while (a != 0)
+{
+    total++;
+    termo = 1;
+
+    for (int i = 1; i &lt;= b; i++)
+        termo *= a;
+
+    Console.WriteLine("Resp = {0}", termo);
+
+    soma += termo;
+
+    Console.WriteLine("Soma = {0}", soma);
+
+    a = Int32.Parse(Console.ReadLine());
+    b = Int32.Parse(Console.ReadLine());
+
+    Console.WriteLine("({0},{1})", a, b);
+}
+
+Console.WriteLine("Total de pares = {0}", total);
+Console.ReadKey();
+</code></pre>
+  <p>
+   Dados:
+   <br/>
+   2 3
+   <br/>
+   5 2
+   <br/>
+   7 1
+   <br/>
+   0 5
+   <br/>
+   3 2
+  </p>
  </body>
 </html>
