Adicionando exercícios do capítulo 5

--- a/curso/modulo1respostas2.html
+++ b/curso/modulo1respostas2.html
@@ -32,7 +32,7 @@
    Curso de Programação C#
   </h1>
   <h2>
-   William Ivanski 2014
+   William Ivanski
   </h2>
   <h3>
    Lista de Exercícios Capítulo 2 (Respostas)
