--- a/modulo1.html
+++ b/modulo1.html
@@ -132,7 +132,7 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 5 - Arrays</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
                                 <td></td>
                             </tr>
