Video da primeira aula do Capítulo 5

--- a/sobremim.html
+++ b/sobremim.html
@@ -73,8 +73,10 @@
                     <li>
                         <h2>Contato</h2>
                         <ul>
-                            <li><a href="mailto:william.ivanski@gmail.com">E-mail: william dot ivanski at gmail dot com</a></li>
+                            <li><a href="mailto:william.ivanski@gmail.com">E-mail: william.ivanski@gmail.com</a></li>
                             <li><a target="_blank" href="https://plus.google.com/+WilliamIvanski/about">Google+</a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/william.ivanski">Facebook</a></li>
+                            <li><a target="_blank" href="https://twitter.com/WilliamIvanski">Twitter</a></li>
                         </ul>
                     </li>
                     <li>
