--- a/modulo1.html
+++ b/modulo1.html
@@ -132,9 +132,9 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 5 - Arrays</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td>Videoaula 20/09/2014 (<a target="_blank" href="http://youtu.be/vs2Vn6glnKU">video 1</a>)</td>
                             </tr>
                             
                             <!-- capitulo 6 -->
