Incluindo artigo nas últimas notícias

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <li>
                         <h2>&Uacute;ltimas not&iacute;cias</h2>
                         <ul>
+                            <li><a href="artigos.html">Vulnerabilidade no Bash</a></li>
                             <li><a href="artigos.html">Introdu&ccedil;&atilde;o ao namespace Spartacus.Database</a></li>
                             <li><a href="spartacus.html">Lan&ccedil;amento da biblioteca Spartacus</a></li>
                             <li><a href="artigos.html">10 maneiras de se tornar um melhor programador</a></li>
