--- a/modulo1.html
+++ b/modulo1.html
@@ -130,14 +130,17 @@
                             
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=2>Cap&iacute;tulo 5 - Arrays</td>
-                                <td rowspan=2><a href="curso/modulo1capitulo5.pptx">Slides</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
+                                <td rowspan=3>Cap&iacute;tulo 5 - Arrays</td>
+                                <td rowspan=3><a href="curso/modulo1capitulo5.pptx">Slides</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
                                 <td>Videoaula 20/09/2014 (<a target="_blank" href="http://youtu.be/vs2Vn6glnKU">video 1</a>)</td>
                             </tr>
                             <tr>
                                 <td>Videoaula 27/09/2014 (<a target="_blank" href="http://youtu.be/MxKelv6yG94">video 1</a>) (<a target="_blank" href="http://youtu.be/vzSMyHjymkw">video 2</a>) (<a target="_blank" href="http://youtu.be/fgWclnusoog">video 3</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 28/09/2014 (<a target="_blank" href="http://youtu.be/fY_luVwhijY">video 1</a>) (<a target="_blank" href="http://youtu.be/VLSFs0OE-Us">video 2</a>) (<a target="_blank" href="http://youtu.be/luWNyWK9dnM">video 3</a>)</td>
                             </tr>
                             
                             <!-- capitulo 6 -->
