Adicionando mais exercícios à lista 5

--- a/curso/modulo1lista5.html
+++ b/curso/modulo1lista5.html
@@ -66,5 +66,48 @@
    <br/>
    - <em>p</em> = 23, <em>q</em> = 258347, <em>p</em> não é subnúmero de <em>q</em>.
   </p>
+  <p>
+   8) Dados dois números naturais <em>M</em> e <em>N</em>, uma frase com <em>M</em> letras e uma palavra com <em>N</em> letras, determine o número de vezes que a palavra ocorre na frase.
+   <br/>
+   Exemplo: Para <em>M</em> = 30, <em>N</em> = 3, a palavra <b>ANA</b> e a frase:
+   <br/>
+   <b>ANA E MARIANA GOSTAM DE BANANA</b>
+   <br/>
+   Temos que a palavra ocorre 4 vezes na frase.
+  </p>
+  <p>
+   9) Dada uma sequência de <em>N</em> números reais, determinar os números que compõem a sequência e o número de vezes que cada um deles ocorre na mesma.
+   <br/>
+   Exemplo: <em>N</em> = 8
+   <br/>
+   Sequência: -1.7, 3.0, 0.0, 1.5, 0.0, -1.7, 2.3, -1.7
+   <br/>
+   Saída:
+   <br/>
+   -1.7 ocorre 3 vezes
+   <br/>
+   3.0 ocorre 1 vez
+   <br/>
+   0.0 ocorre 2 vezes
+   <br/>
+   1.5 ocorre 1 vez
+   <br/>
+   2.3 ocorre 1 vez
+  </p>
+  <p>
+   10) Dados dois números naturais <em>M</em> e <em>N</em> e duas sequências ordenadas com <em>M</em> e <em>N</em> números inteiros, obter uma única sequência ordenada contendo todos os elementos das sequências originais sem repetição.
+  </p>
+  <p>
+   11) Dadas duas sequências com <em>N</em> números inteiros entre 0 e 9, interpretadas como dois números inteiros de <em>N</em> algarismos, calcular a sequência de números que representa a soma dos dois inteiros.
+  </p>
+  <p>
+   12) Calcule o valor do polinômio <em>p(x) = a<sub>0</sub> + a<sub>1</sub>x + ... + a<sub>n</sub>x<sup>n</sup></em> em <em>k</em> pontos distintos. São dados os valores de <em>n</em> (grau do polinômio), de <em>a<sub>0</sub>,a<sub>1</sub>,...,a<sub>n</sub></em> (coeficientes reais do polinômio), de <em>k</em> e dos pontos <em>x<sub>1</sub>,x<sub>2</sub>,...,x<sub>n</sub></em>.
+  </p>
+  <p>
+   13) Dado o polinômio <em>p(x) = a<sub>0</sub> + a<sub>1</sub>x + ... + a<sub>n</sub>x<sup>n</sup></em>, isto é, os valores de <em>n</em> e de <em>a<sub>0</sub>,a<sub>1</sub>,...,a<sub>n</sub></em>, determine os coeficientes reais da primeira derivada de <em>p(x)</em>.
+  </p>
+  <p>
+   14) Em uma classe há <em>N</em> alunos, cada um dos quais realizou <em>K</em> provas com pesos distintos. Dados <em>N</em>, <em>K</em>, os pesos das <em>K</em> provas e as notas de cada aluno, calcular a média ponderada das provas para cada aluno e a média aritmética da classe em cada uma das provas.
+  </p>
  </body>
 </html>
