--- a/modulo1.html
+++ b/modulo1.html
@@ -130,10 +130,10 @@
                             
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=4>Cap&iacute;tulo 5 - Vetores</td>
-                                <td rowspan=4><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
+                                <td rowspan=5>Cap&iacute;tulo 5 - Vetores</td>
+                                <td rowspan=5><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
+                                <td rowspan=5><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=5><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
                                 <td>Videoaula 20/09/2014 (<a target="_blank" href="http://youtu.be/vs2Vn6glnKU">video 1</a>)</td>
                             </tr>
                             <tr>
@@ -144,6 +144,9 @@
                             </tr>
                             <tr>
                                 <td>Videoaula 05/10/2014 (<a target="_blank" href="http://youtu.be/sOz-GO-14Hc">video 1</a>) (<a target="_blank" href="http://youtu.be/J6rXqs5zSaE">video 2</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 11/10/2014 (<a target="_blank" href="http://youtu.be/oNswYmg7j_E">video 1</a>) (<a target="_blank" href="http://youtu.be/DweggKBL42Y">video 2</a>)</td>
                             </tr>
                             
                             <!-- capitulo 6 -->
@@ -184,7 +187,7 @@
                         </table>
                         </p>
                     </div>
-                    <p class="meta">Curitiba, 15 de setembro de 2014.</p>
+                    <p class="meta">Curitiba, 11 de outubro de 2014.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
