--- a/modulo1.html
+++ b/modulo1.html
@@ -130,10 +130,10 @@
                             
                             <!-- capitulo 5 -->
                             <tr>
-                                <td rowspan=6>Cap&iacute;tulo 5 - Vetores</td>
-                                <td rowspan=6><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
-                                <td rowspan=6><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=6><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
+                                <td rowspan=7>Cap&iacute;tulo 5 - Vetores</td>
+                                <td rowspan=7><a href="curso/modulo1capitulo5.pptx">Slides</a> (<a target="_blank" href="curso/modulo1exemplos5.html">Exemplos</a>)</td>
+                                <td rowspan=7><a target="_blank" href="curso/modulo1lista5.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=7><a target="_blank" href="curso/modulo1respostas5.html">Respostas</a></td>
                                 <td>Videoaula 20/09/2014 (<a target="_blank" href="http://youtu.be/vs2Vn6glnKU">video 1</a>)</td>
                             </tr>
                             <tr>
@@ -150,6 +150,9 @@
                             </tr>
                             <tr>
                                 <td>Videoaula 12/10/2014 (Revis&atilde;o Completa) (<a target="_blank" href="http://youtu.be/Ctm-_kZdnQA">video 1</a>) (<a target="_blank" href="http://youtu.be/3jPK1XZHXtY">video 2</a>) (<a target="_blank" href="http://youtu.be/ytgnGSPGrnY">video 3</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 26/10/2014 (<a target="_blank" href="http://youtu.be/OPExpFKV6dw">video 1</a>) (<a target="_blank" href="http://youtu.be/6BGgTlcaubU">video 2</a>)</td>
                             </tr>
                             
                             <!-- capitulo 6 -->
