--- a/curso/modulo1respostas3.html
+++ b/curso/modulo1respostas3.html
@@ -35,7 +35,7 @@
    William Ivanski
   </h2>
   <h3>
-   Lista de Exercícios Capítulo 3
+   Lista de Exercícios Capítulo 3 (Respostas)
   </h3>
   <hr/>
   <p>
