--- a/curso/modulo1respostas4.html
+++ b/curso/modulo1respostas4.html
@@ -36,7 +36,7 @@
    William Ivanski
   </h2>
   <h3>
-   Lista de Exercícios Capítulo 4
+   Lista de Exercícios Capítulo 4 (Respostas)
   </h3>
   <hr/>
   <p>
