--- a/modulo1.html
+++ b/modulo1.html
@@ -161,9 +161,9 @@
                             <!-- capitulo 6 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 6 - Matrizes</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=1><a href="curso/modulo1capitulo6.pptx">Slides</a></td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1respostas6.html">Respostas</a></td>
                                 <td></td>
                             </tr>
                             
