--- a/curso/modulo1respostas5.html
+++ b/curso/modulo1respostas5.html
@@ -31,7 +31,7 @@
  <body>
   <h1>Curso de Programação C#</h1>
   <h2>William Ivanski</h2>
-  <h3>Lista de Exercícios Capítulo 5</h3>
+  <h3>Lista de Exercícios Capítulo 5 (Respostas)</h3>
   <hr/>
   <p>
    1) Dada uma sequência de <em>N</em> números, imprimi-la na ordem inversa.
