--- a/curso/modulo1respostas6.html
+++ b/curso/modulo1respostas6.html
@@ -31,7 +31,7 @@
  <body>
   <h1>Curso de Programação C#</h1>
   <h2>William Ivanski</h2>
-  <h3>Lista de Exercícios Capítulo 6</h3>
+  <h3>Lista de Exercícios Capítulo 6 (Respostas)</h3>
   <hr/>
   <p>
    1) Dada uma matriz real <em>A</em> com <em>m</em> linhas e <em>n</em> colunas e um vetor real <em>V</em> com <em>n</em> elementos, determinar o produto de <em>A</em> por <em>V</em>.
