--- a/modulo1.html
+++ b/modulo1.html
@@ -164,7 +164,7 @@
                                 <td rowspan=1><a href="curso/modulo1capitulo6.pptx">Slides</a></td>
                                 <td rowspan=1><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1><a target="_blank" href="curso/modulo1respostas6.html">Respostas</a></td>
-                                <td></td>
+                                <td>Videoaula 09/11/2014 (<a target="_blank" href="http://youtu.be/UcLC-v3l8Cw">video 1</a>) (<a target="_blank" href="http://youtu.be/PPD-2hKWfDs">video 2</a>)</td>
                             </tr>
                             
                             <!-- capitulo 7 -->
