--- a/curso.html
+++ b/curso.html
@@ -95,6 +95,10 @@
                         <h2><a href="spartacus.html">Biblioteca Spartacus</a></h2>
                         <ul>
                             <li><a href="https://github.com/wind39/spartacus">Projeto no GitHub</a></li>
+                            <li><a href="spartacus/Spartacus-0.35.2.zip">Download vers&atilde;o 0.35.2</a></li>
+                            <li><a href="spartacus/Spartacus-0.35.2.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.35.2</a></li>
+                            <li><a href="spartacus/Spartacus-0.32.0.zip">Download vers&atilde;o 0.32.0</a></li>
+                            <li><a href="spartacus/Spartacus-0.32.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.32.0</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.zip">Download vers&atilde;o 0.30.0</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.30.0</a></li>
                         </ul>
