Adicionando página Riddler e tirando página Recomendações.

--- a/spartacus.html
+++ b/spartacus.html
@@ -34,9 +34,8 @@
             <ul>
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
                 <li><a class="current" href="projetos.html" accesskey="2" title="Projetos">Projetos</a></li>
-                <li><a href="recomendacoes.html" accesskey="3" title="Recomenda&ccedil;&otilde;es">Recomenda&ccedil;&otilde;es</a></li>
-                <li><a href="artigos.html" accesskey="4" title="Artigos">Artigos</a></li>
-                <li><a href="sobremim.html" accesskey="5" title="Sobre mim">Sobre mim</a></li>
+                <li><a href="artigos.html" accesskey="3" title="Artigos">Artigos</a></li>
+                <li><a href="sobremim.html" accesskey="4" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
         <hr />
@@ -168,6 +167,13 @@
                             <li><a href="spartacus/Spartacus-0.32.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.32.0</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.zip">Download vers&atilde;o 0.30.0</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.30.0</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2><a href="riddler.html">Riddler (Criptografia)</a></h2>
+                        <ul>
+                            <li><a href="https://github.com/wind39/riddler">Projeto no GitHub</a></li>
+                            <li><a href="riddler/Riddler-0.1.0.zip">Download vers&atilde;o 0.1.0</a></li>
                         </ul>
                     </li>
                 </ul>
