--- a/curso.html
+++ b/curso.html
@@ -34,9 +34,8 @@
             <ul>
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
                 <li><a class="current" href="projetos.html" accesskey="2" title="Projetos">Projetos</a></li>
-                <li><a href="recomendacoes.html" accesskey="3" title="Recomenda&ccedil;&otilde;es">Recomenda&ccedil;&otilde;es</a></li>
-                <li><a href="artigos.html" accesskey="4" title="Artigos">Artigos</a></li>
-                <li><a href="sobremim.html" accesskey="5" title="Sobre mim">Sobre mim</a></li>
+                <li><a href="artigos.html" accesskey="3" title="Artigos">Artigos</a></li>
+                <li><a href="sobremim.html" accesskey="4" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
         <hr />
@@ -61,7 +60,7 @@
                             <li>C# intermedi&aacute;rio (bibliotecas, manipula&ccedil;&atilde;o de arquivos e interfaces gr&aacute;ficas);</li>
                             <li>Banco de dados.</li>
                         </ul>
-                        <p>Videoaulas ao vivo pelo Google Hangouts, 2x por semana, aos s&aacute;bados e domingos &agrave;s 18 horas. As aulas s&atilde;o gravadas e postadas na &iacute;ntegra no Youtube.</p>
+                        <p>Videoaulas ao vivo pelo Google Hangouts, 1x por semana. As aulas s&atilde;o gravadas e postadas na &iacute;ntegra no Youtube.</p>
                         <p>Participe da nossa <a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">comunidade no Google+</a>.</p>
                     </div>
                     <p class="meta">Curitiba, 12 de agosto de 2014.</p>
@@ -101,6 +100,13 @@
                             <li><a href="spartacus/Spartacus-0.32.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.32.0</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.zip">Download vers&atilde;o 0.30.0</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.30.0</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2><a href="riddler.html">Riddler (Criptografia)</a></h2>
+                        <ul>
+                            <li><a href="https://github.com/wind39/riddler">Projeto no GitHub</a></li>
+                            <li><a href="riddler/Riddler-0.1.0.zip">Download vers&atilde;o 0.1.0</a></li>
                         </ul>
                     </li>
                 </ul>
