Mudanças Módulo I e II

--- a/modulo1.html
+++ b/modulo1.html
@@ -182,16 +182,7 @@
                             
                             <!-- capitulo 8 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 8 - Gerenciamento de Mem&oacute;ria e Otimiza&ccedil;&atilde;o</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
-                                <td rowspan=1>Respostas</td>
-                                <td></td>
-                            </tr>
-                            
-                            <!-- capitulo 9 -->
-                            <tr>
-                                <td rowspan=1>Cap&iacute;tulo 9 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
+                                <td rowspan=1>Cap&iacute;tulo 8 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
@@ -200,7 +191,7 @@
                         </table>
                         </p>
                     </div>
-                    <p class="meta">Curitiba, 13 de outubro de 2014.</p>
+                    <p class="meta">Curitiba, 2 de mar&ccedil;o ' de 2014.</p>
                     <script src="https://apis.google.com/js/plusone.js">
                     </script>
                     <g:comments
