--- a/modulo2.html
+++ b/modulo2.html
@@ -65,7 +65,63 @@
                             <li>Conhecer o conte&uacute;do do <a href="modulo1.html">M&oacute;dulo I</a>.</li>
                         </ul>
                         <p>Cronograma:</p>
-                        <p></p>
+                        <p>
+                        <table border=1>
+                            <!-- capitulo 1 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 1 - Bibliotecas</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 2 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 2 - B&aacute;sico de Sistemas Operacionais</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 3 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 3 - Manipula&ccedil;&atilde;o de Arquivos</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 4 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 5 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 5 - Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 6 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 6 - Primeiro Programa Completo com Interface Gr&aacute;fica</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+                        </table>
+                        </p>
                     </div>
                     <p class="meta">Curitiba, 12 de agosto de 2014.</p>
                     <script src="https://apis.google.com/js/plusone.js">
